<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.vigneshbala</groupId>
	<artifactId>twi</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>twi</name>
	<description>A Command Line utility to quickly convert the natural language
		time from one zone to another. The name twi is Yoda speak for Time What
		is?</description>

	<properties>
		<maven.compiler.source>9</maven.compiler.source>
		<maven.compiler.target>9</maven.compiler.target>
		<com.zoho.hawking.version>0.1.8</com.zoho.hawking.version>
		<info.picocli.version>4.7.6</info.picocli.version>
		<org.slf4j.jul-to-slf4j.version>2.1.0-alpha1</org.slf4j.jul-to-slf4j.version>
		<ch.qos.logback.logback-classic.version>1.5.6</ch.qos.logback.logback-classic.version>
		<com.github.cliftonlabs.json-simple.version>4.0.1</com.github.cliftonlabs.json-simple.version>
		<joda-time.joda-time.version>2.12.7</joda-time.joda-time.version>
		<org.testng.testng.version>7.10.2</org.testng.testng.version>
	</properties>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>${info.picocli.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/jul-to-slf4j -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
			<version>${org.slf4j.jul-to-slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${ch.qos.logback.logback-classic.version}</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/com.github.cliftonlabs/json-simple -->
		<dependency>
			<groupId>com.github.cliftonlabs</groupId>
			<artifactId>json-simple</artifactId>
			<version>${com.github.cliftonlabs.json-simple.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${org.testng.testng.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<outputDirectory>target/jmods</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>target/jmods</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>1.6.4</version>

				<!-- Common part of configuration -->
				<configuration>
					<name>twi</name>
					<appVersion>0.1</appVersion>
					<vendor>com.vigneshbala</vendor>
					<module>twi/com.vigneshbala.twi.cli.TimeConverter</module>
					<modulePaths>
						<modulePath>target/jmods</modulePath>
					</modulePaths>
					<destination>target/dist</destination>
					<javaOptions>
						<option>--enable-preview</option>
						<option>-Dfile.encoding=UTF-8</option>
					</javaOptions>
				</configuration>
				<executions>
					<execution>
						<id>mac</id>
						<configuration>
							<icon>icons/icons.icns</icon>
						</configuration>
					</execution>
					<execution>
						<id>win</id>
						<configuration>
							<icon>icons/icon.ico</icon>
							<winMenu>true</winMenu>
						</configuration>
					</execution>
					<execution>
						<id>linux</id>
						<configuration>
							<type>APP_IMAGE</type>
							<icon>icons/icon.png</icon>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>